Fix Safari Angular Issues and Add Cross-browser Styles
Fixes an issue with Safari 5.1 that resulted in truncate pipe throwing an application error. Also adds styles for cross-browser friendliness.

* Load polyfill library via cdn (temporary) to fix issues with Safari 5.1 and other older browsers
* Covert terminal SVG to divs for improved cross-browser styles
* Use SVG padding hack for logo to display logo properly across browsers
* Set flag loading icon width and height to ensure stretching doesn't occur in older browsers

--- a/src/app/components/app/app.style.scss
+++ b/src/app/components/app/app.style.scss
@@ -108,11 +108,10 @@
 
 .app-logo {
   float: left;
-  max-width: 6em;
+  width: 6em;
 
   a {
-    color: $brand-blue;
-    display: inline-block;
+    display: block;
 
     &:focus {
       box-shadow: none;
@@ -121,13 +120,23 @@
   }
 
   svg {
-    display: block;
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+  }
+
+  .svg-container {
+    height: 0;
+    padding-top: 29%;
+    position: relative;
     width: 100%;
   }
 }
 
 .app-navigation {
-  font-size: 0.9em;
+  font-size: 0.8em;
   padding: 1.75em 0;
 
   @include media($small-screen) {
