--- a/src/app/components/policy-guide/docs/docs.style.scss
+++ b/src/app/components/policy-guide/docs/docs.style.scss
@@ -2,10 +2,11 @@
 
 .docs-content {
   background-color: $color-white;
-  padding: 2.5em 1.5em;
+  padding: 1em 1em 2em;
 
   @include media($medium-screen) {
     @include span-columns(9);
+    padding: 2em 2em 3em;
   }
 
   @include media($extra-large-screen) {
